# MCUSim

./: .sonarcloud.properties  .travis.yml  AUTHORS  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  DEVICES  INSTALL  INSTALL.txt  LICENSE  Models.txt  README  README.md  avrsim.c  decoder.c  gdb_rsp.c  getopt_long.c  ihex.c  main.c  peripheral_lua.c  peripheral_luaapi.c  simcore.c  simm2560.c  simm328.c  simm328p.c  simm8a.c  vcd_dump.c
avrsim/: CMakeLists.txt  avrsim.c  avrstat.c  cli.c  decoder.c  gdb_rsp.c  getopt_long.c  ihex.c  ipc.c  peripheral_lua.c  simcore.c  simm2560.c  simm328.c  simm328p.c  simm8a.c  vcd_dump.c
avrsim/include/mcusim/: cli.h  getopt.h
avrsim/man/: avrsim.1
examples/: CMakeLists.txt
examples/ATMEGA8A-pwm-to-sine/: README.md  firmware.conf  pwm-to-sine.cir
examples/ATMEGA8A-pwm-to-sine/firmware/: CMakeLists.txt  fuse.c  main.c
handbook/: CMakeLists.txt  mcusim-handbook.tex
handbook/ch2_compile_and_install/: compile_and_install.tex
handbook/ch3_circuit_description/: circuit_description.tex
handbook/ch4_circuit_elements_and_models/: circuit_elements_and_models.tex
handbook/chapter1/: introduction.tex
handbook/chapter2/: preparing-binaries.tex
handbook/chapter3/: avrsim.tex
lib/: CMakeLists.txt
lib/avr/: simcore.c  simm8a.c
lib/clock/x86/: tsc.c  util.c
lib/datastruct/: queue.c
lib/math/: math.c
lib/thread/: pool.c
scripts/: CMakeLists.txt  install-hooks.sh  make-board.sh  mcusim-avr-board  mcusim-config  mcusim.conf.in  pre-commit.sh  reinstall-hooks.sh
scripts/avr/: dht11.lua  io.lua
scripts/examples/ATMEGA8A-pwm-to-sine/: firmware.conf  firmware.hex  pwm-to-sine.cir
scripts/examples/ATMEGA8A-with-mosfet-switch/: 1N5819.LIB  NTA4001NT1.LIB  NTA4153N.REV0.LIB  NTR0202PL.REV0.LIB  README  pb3-pwm.cir  pb3-pwm.conf
scripts/models/avr/: dht11.lua
tests/: CMakeLists.txt  avr_core_test.c  m8a_test.c  math_test.c  minunit.c  tests.cmake.in  threadpool_test.c  tsc_test.c
tests/ATMEGA328-output-toggle/: check-output.lua  firmware.hex  mcusim.conf  stop-in-5s.lua  test
tests/ATMEGA328-tc0-ctc-mode/: CMakeLists.txt  firmware.hex  main.c  mcusim.conf  stop-test.lua
tests/ATMEGA328-toggle-pin/: check-pin.lua  firmware.hex  main.c  mcusim.conf
tests/ATMEGA8A-clock-pin/: CMakeLists.txt  mcusim.conf
tests/ATMEGA8A-tc0-external-clock-source/: firmware.c  mcusim.conf  test
tests/ATMEGA8A-tc1-fastpwm-mode/: CMakeLists.txt  firmware.hex  mcusim.conf  test.in
tests/ATMEGA8A-tc2-ctc-mode/: check_OCR2_updated.lua  firmware.hex  main.c  mcusim.conf  stop-test.lua
tests/ATMEGA8A-tc2-fastpwm-mode/: firmware.hex  firmware.hex.txt  main.c  mcusim.conf  test
tests/ATMEGA8A-tc2-fastpwm-toggle/: firmware.hex  mcusim.conf  test
tests/ATMEGA8A-tc2-pcpwm-mode/: firmware.hex.txt  main.c  stop-test.lua
tests/ATMEGA8A-usart-optiboot/: m8a-clockpin.hex.txt  mcusim.conf.off  optiboot_m8a_16MHz_57600.hex  optiboot_m8a_16MHz_57600.hex.txt  run-atmega8a
tests/atmega328/output-toggle/: check-output.lua  firmware.c  firmware.hex.txt  mcusim.conf  stop-in-5s.lua
tests/atmega328p/timer0-ctc/: main.c  mcusim.conf  stop-test.lua
tests/atmega328p/timer1-ctc-with-input-capture/: CMakeLists.txt  main.c  mcusim.conf  toggle-icp1.lua
tests/atmega328p/timer1-pcpwm/: CMakeLists.txt  check-pb2-falls.lua  check-pb2-rises.lua  firmware.hex  firmware.hex.txt  main.c  mcusim.conf
tests/atmega328p/timer1-pfcpwm/: check-pb2-falls.lua  check-pb2-rises.lua  firmware.hex  firmware.hex.txt  fuse.c  main.c
tests/atmega328p/toggle-pin/: CMakeLists.txt  firmware.hex.txt  main.c  mcusim.conf
tests/atmega328p/wdt-interrupt/: CMakeLists.txt  main.c  mcusim.conf.off
tests/atmega8a/timer0-ext-clock-source/: CMakeLists.txt  check-timer0.lua  external-clock.lua  firmware.c  main.c  mcusim.conf
tests/atmega8a/timer0-normal/: .mcusim.flash  CMakeLists.txt  check-timer0.lua  firmware.hex  firmware.hex.txt  main.c  mcusim.conf  trace.vcd
tests/atmega8a/timer1-fastpwm/: CMakeLists.txt  firmware.hex.txt  fuse.c  main.c  mcusim.conf
tests/atmega8a/timer1-normal/: .mcusim.flash  CMakeLists.txt  check-timer1.lua  firmware.hex  main.c  mcusim.conf
tests/atmega8a/timer2-ctc/: CMakeLists.txt  check_OCR2_updated.lua  firmware.hex.txt  main.c  mcusim.conf  stop-test.lua
tests/atmega8a/timer2-fastpwm/: CMakeLists.txt  check-pb3.lua  firmware.hex  firmware.hex.txt  fuse.c  main.c  mcusim.conf
tests/atmega8a/timer2-fastpwm-toggle/: firmware.hex.txt  main.c
tests/atmega8a/timer2-pcpwm/: CMakeLists.txt  check-pb3-falls.lua  check-pb3-rises.lua  firmware.hex  firmware.hex.txt  main.c  mcusim.conf
tests/atmega8a/toggle-pin/: CMakeLists.txt  main.cpp  mcusim.conf  stop-test.lua
tests/atmega8a/usart-optiboot/: README  m8a-clockpin.hex  mcusim.conf.off
tests/atmega8a_tc0-external-clock-source/: check-timer0.lua  external-clock.lua  firmware.hex  test
tests/ft/: CMakeLists.txt  XlingFirmware.ft.c  XlingFirmware_1.ft.c  tests.cmake.in
tests/ft/files/: XlingFirmware.dm_0000.hex  XlingFirmware.dm_04de.hex  XlingFirmware.dm_051e.hex  XlingFirmware.dm_0568.hex  XlingFirmware.dm_067a.hex  XlingFirmware.dm_0_0240.hex  XlingFirmware.dm_100_6F5.hex  XlingFirmware.dm_101_6F6.hex  XlingFirmware.dm_102_57B.hex  XlingFirmware.dm_10_024D.hex  XlingFirmware.dm_10_249.hex  XlingFirmware.dm_11_24A.hex  XlingFirmware.dm_12_024F.hex  XlingFirmware.dm_12_24B.hex  XlingFirmware.dm_13_251.hex  XlingFirmware.dm_14_0259.hex  XlingFirmware.dm_15_025F.hex  XlingFirmware.dm_16_0262.hex  XlingFirmware.dm_16_254.hex  XlingFirmware.dm_17_0269.hex  XlingFirmware.dm_17_259.hex  XlingFirmware.dm_18_25F.hex  XlingFirmware.dm_19_0277.hex  XlingFirmware.dm_19_1_027C.hex  XlingFirmware.dm_19_260.hex  XlingFirmware.dm_19_2_0283.hex  (+82 more)
tests/include/: minunit.h
tests/ut/: CMakeLists.txt  avris.ut.c  firmware.hex  mcusim.ut.conf  tests.cmake.in
ui/: CMakeLists.txt  mcusim_app.cpp  mcusim_main_window.cpp
xspice/: CMakeLists.txt  ngspice-0001-add-library-name.patch  ngspice-0001.patch  ngspice-0002.patch.in  ngspice-0003-add-codemodel-lib.patch  patch-ngspice-sources
(+199 files in other folders)
